Update index page

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -6,9 +6,37 @@ import { Image } from "@heroui/image";
 
 # Howdy, I'm Jeffrey!
 
-I'm a student at Tarleton State University (Bleed Purple!), pursuing an Electrical Engineering B.S., with a minor in Computer Science.
-
 <Image isBlurred className="m-5" alt="2024 TSU Bonfire" src="/bonfire-24.jpg"/>
+> Tarleton 2024 Homecoming Bonfire
+
+I'm a student at Tarleton State University, pursuing an Electrical Engineering B.S., with a minor in Computer Science.
+
+Currently I do some freelance work as a "junior electrical engineer," primarly creating custom 32-bit microcontrollers PCBs for various purposes.
+
+I also, as a software developer, work on some code; writing firmware for the aforementioned PCBs in C & C++, along with various other projects in C, C++, Dart / Flutter, & Java.
+
+---
+
+<Cards>
+<Cards.Card title="Résumé" href='/resume' icon ={
+    <div>
+        <img src='/article_person_light.svg' className='block dark:hidden w-10 h-10'/>
+        <img src='/article_person_dark.svg' className='hidden dark:block w-10 h-10'/>
+    </div>
+}/>
+<Cards.Card title="Portfolio" href='/portfolio' icon ={
+    <div>
+        <img src='/cases_light.svg' className='block dark:hidden w-10 h-10'/>
+        <img src='/cases_dark.svg' className='hidden dark:block w-10 h-10'/>
+    </div>
+}/>
+<Cards.Card title="Contact Me" href='/contact_me' icon ={
+    <div>
+        <img src='/communication_light.svg' className='block dark:hidden w-10 h-10'/>
+        <img src='/communication_dark.svg' className='hidden dark:block w-10 h-10'/>
+    </div>
+}/>
+</Cards>
 
 ---
 
