Update resume page & create a viewer component.

--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -1,2 +1,15 @@
+---
+title: Résumé
+description: Current and past résumé files.
+---
 
-Testing 123
+import {ResumeViewer} from '../components/ResumeViewer'
+
+# Résumés
+
+Below is a list of my current and past résumés, they should preview in the browser but feel free to download them
+by pressing "Download" below each title for the respective pdf.
+
+---
+
+<ResumeViewer/>
