--- a/content/resume.mdx
+++ b/content/resume.mdx
@@ -3,7 +3,7 @@ title: Résumé
 description: Current and past résumé files.
 ---
 
-import {ResumeViewer} from '../components/ResumeViewer'
+import { ResumeViewer } from '../components/ResumeViewer'
 
 # Résumés
 
@@ -11,5 +11,5 @@ Below is a list of my current and past résumés, they should preview in the bro
 by pressing "Download" below each title for the respective pdf.
 
 ---
-
+{ /* To update the resume list and add more resumes just add the path to components/ResumeViewer.tsx */ }
 <ResumeViewer/>
