--- a/content/index.mdx
+++ b/content/index.mdx
@@ -3,10 +3,11 @@ title: Homepage
 ---
 
 import { Image } from "@heroui/image";
+import { Cards } from 'nextra/components'
 
 # Howdy, I'm Jeffrey!
 
-<Image isBlurred className="m-5" alt="2024 TSU Bonfire" src="/bonfire-24.jpg"/>
+<Image isBlurred className='mt-5' alt="2024 TSU Bonfire" src="/bonfire-24.jpg"/>
 > Tarleton 2024 Homecoming Bonfire
 
 I'm a student at Tarleton State University, pursuing an Electrical Engineering B.S., with a minor in Computer Science.
@@ -15,19 +16,19 @@ Currently I do some freelance work as a "junior electrical engineer," primarly c
 
 I also, as a software developer, work on some code; writing firmware for the aforementioned PCBs in C & C++, along with various other projects in C, C++, Dart / Flutter, & Java.
 
----
+## Find out more:
 
 <Cards>
-<Cards.Card title="Résumé" href='/resume' icon ={
-    <div>
-        <img src='/article_person_light.svg' className='block dark:hidden w-10 h-10'/>
-        <img src='/article_person_dark.svg' className='hidden dark:block w-10 h-10'/>
-    </div>
-}/>
 <Cards.Card title="Portfolio" href='/portfolio' icon ={
     <div>
         <img src='/cases_light.svg' className='block dark:hidden w-10 h-10'/>
         <img src='/cases_dark.svg' className='hidden dark:block w-10 h-10'/>
+    </div>
+}/>
+<Cards.Card title="Résumé" href='/resume' icon ={
+    <div>
+        <img src='/article_person_light.svg' className='block dark:hidden w-10 h-10'/>
+        <img src='/article_person_dark.svg' className='hidden dark:block w-10 h-10'/>
     </div>
 }/>
 <Cards.Card title="Contact Me" href='/contact_me' icon ={
@@ -36,31 +37,4 @@ I also, as a software developer, work on some code; writing firmware for the afo
         <img src='/communication_dark.svg' className='hidden dark:block w-10 h-10'/>
     </div>
 }/>
-</Cards>
-
----
-
-import { Cards } from 'nextra/components'
-
-<Cards>
-<Cards.Card title="GitHub" href="https://www.github.com/daflamingfox" icon={
-    <div>
-        <img src="/github-light.svg" className="block dark:hidden w-10 h-10" />
-        <img src="/github-dark.svg" className="hidden dark:block w-10 h-10"/>
-    </div>
-}
-/>
-<Cards.Card title="LinkedIn" href="https://www.linkedin.com/in/jeffrey-morris-60729a309" icon ={
-    <div>
-        <img src="/linkedIn.svg" className="w-10 h-10"/>
-    </div>
-}
-/>
-<Cards.Card title="Email" href="mailto:ffejcsirrom@gmail.com?subject=Hi%20Jeffrey!" icon={
-    <div>
-        <img src="/mail-light.svg" className="block dark:hidden w-10 h-10" />
-        <img src="/mail-dark.svg" className="hidden dark:block w-10 h-10"/>
-    </div>
-}
-/>
 </Cards>
