--- a/content/portfolio.mdx
+++ b/content/portfolio.mdx
@@ -16,13 +16,18 @@ I've also written comprehensive documetnation for the user of CANnect [here.](ht
 
 <Image isBlurred src='portfolio/cannect.jpg' className='mt-5'/>
 
+> CANnect system in use, on a robot.
+
 ## Ranger
 
 I created "Ranger," a custom PCB for a LIDAR sensor, delivering both analog and digital outputs to simplify the use of the device.
 Ranger is available for purchase [here.](https://swyftrobotics.com/products/swyft-ranger-distance-sensor)
 
 I've also written comprehensive documentation for the use of Ranger [here.](https://docs.swyftrobotics.com/electronics/swyft-ranger)
+
 <Image isBlurred src='portfolio/ranger.png'/>
+
+> Exploded-view of Ranger
 
 ## Spring & point-mass physics simulation
 
@@ -34,8 +39,9 @@ to produce a stable pyramid built with 3 point-masses all interconnected with sp
     <video autoPlay loop muted>
         <source src='/portfolio/spring-mass-sim-cropped.mp4' type='video/mp4'/>
     </video>
-{/* <Image className='z-0 w-full h-full object-cover' src='/portfolio/spring-mass-sim-2.gif'/> */}
 </Card>
+
+> Original simulation submission for the lab
 
 You can play with the notebook [here.](https://colab.research.google.com/github/DAflamingFOX/MATH-3306/blob/main/TakeHomeLab_6.ipynb)
 
@@ -45,4 +51,9 @@ Simulated a DC Motor and its current draw in order to describe how a stall can b
 I also wrote up a comprehensive analysis of the simulation on Tigerbotics' website [here.](https://www.tigerbotics.org/programming/current-monitoring)
 
 <Image isBlurred src='/portfolio/current-spike-sim.png' className='mt-5'/>
+
+> Plot showing current draw and motor velocity over time
+
 <Image isBlurred src='/portfolio/stall-stopped.png' className='mt-5'/>
+
+> Plot showing important steps in a motor stall
