Update About Me

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -5,16 +5,26 @@ title: Homepage
 import { Image } from "@heroui/image";
 import { Cards } from 'nextra/components'
 
-# Howdy, I'm Jeffrey!
-
+# Howdy, I'm Jeffrey
 <Image isBlurred className='mt-5' alt="2024 TSU Bonfire" src="/bonfire-24.jpg"/>
 > Tarleton 2024 Homecoming Bonfire
 
-I'm a student at Tarleton State University, pursuing an Electrical Engineering B.S., with a minor in Computer Science.
+## About me
 
-Currently I do some freelance work as a "junior electrical engineer," primarly creating custom 32-bit microcontrollers PCBs for various purposes.
+I like to call myself a jack of *some* trades, or a proficiently dedicated dabbler.
 
-I also, as a software developer, work on some code; writing firmware for the aforementioned PCBs in C & C++, along with various other projects in C, C++, Dart / Flutter, & Java.
+My main focus right now is being a student at Tarleton State University, pursuing an Bachelor's degree in **Electrical Engineering**, with a minor in Computer Science.
+
+I enjoy the E.E. / C.S. field so much that I currently I do some freelance work as a "junior electrical engineer," primarly creating custom **32-bit microcontrollers PCBs** for various purposes.
+I also enjoy **writing firmware** for the aforementioned PCBs in **C & C++**, along with various other projects in **C, C++, Dart / Flutter, & Java**.
+
+On a more personal note, I enjoy hanging out with my friends, playing with my dog, Maisey, playing tennis & pickleball, drawing, graphics design, and even linedancing!
+
+<div className='flex justify-center'>
+
+<Image isBlurred className='mt-5 w-100' alt="Maisey Portrait" src="/Maisey_20250707.jpg" />
+
+</div>
 
 ## Find out more:
 
