Here you go levi

--- a/app/mdx-file/page.mdx
+++ b/app/mdx-file/page.mdx
@@ -3,15 +3,14 @@ title: Homepage
 ---
 
 import { Image } from "@heroui/image";
-import { Cards } from 'nextra/components'
+import { Cards, Bleed } from 'nextra/components'
 
-# Howdy, I'm Jeffrey
 <Image isBlurred className='mt-5' alt="2024 TSU Bonfire" src="/bonfire-24.jpg"/>
 > Tarleton 2024 Homecoming Bonfire
 
 ## About me
 
-I like to call myself a jack of *some* trades, or a proficiently dedicated dabbler.
+I am a proficiently dedicated dabbler.
 
 My main focus right now is being a student at Tarleton State University, pursuing an Bachelor's degree in **Electrical Engineering**, with a minor in Computer Science.
 
